feature(detail): first implementation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="black_russian">#22252B</color>
     <color name="vulcan">#363B45</color>
+    <color name="scarlet">#F61E0F</color>
 </resources>
