--- a/app/src/main/res/layout/hero_item.xml
+++ b/app/src/main/res/layout/hero_item.xml
@@ -23,6 +23,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
+        android:background="@drawable/circle"
         app:layout_constraintBottom_toBottomOf="@id/background"
         app:layout_constraintStart_toStartOf="@id/background"
         app:layout_constraintTop_toTopOf="@id/background" />
@@ -34,6 +35,7 @@
         android:layout_marginStart="8dp"
         android:textColor="@color/white"
         android:textSize="14sp"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@id/background"
         app:layout_constraintEnd_toEndOf="@id/background"
         app:layout_constraintStart_toEndOf="@+id/thumbnail"
