--- a/app/src/main/res/layout/squad_hero_item.xml
+++ b/app/src/main/res/layout/squad_hero_item.xml
@@ -7,8 +7,9 @@
 
     <ImageView
         android:id="@+id/thumbnail"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@drawable/circle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,6 +21,8 @@
         android:layout_marginTop="8dp"
         android:textColor="@color/white"
         android:textSize="14sp"
+        android:gravity="center"
+        android:maxLines="2"
         app:layout_constraintEnd_toEndOf="@id/thumbnail"
         app:layout_constraintStart_toStartOf="@id/thumbnail"
         app:layout_constraintTop_toBottomOf="@id/thumbnail" />
