--- a/app/src/main/res/drawable/ic_arrow_left_white.xml
+++ b/app/src/main/res/drawable/ic_arrow_left_white.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="20">
   <path
       android:pathData="M0,10l1.2,1.3 8.8,8.8 1.2,-1.3 -7.9,-7.9L22,10.9v-1.8h-18.6l7.9,-7.9 -1.3,-1.2 -8.8,8.8L0,10z"
-      android:fillColor="@color/scarlet"/>
+      android:fillColor="#f2f2f2"/>
 </vector>
