--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,5 +1,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">gateway.marvel.com</domain>
+        <domain includeSubdomains="true">i.annihil.us</domain>
     </domain-config>
 </network-security-config>
